AUTOMAKE_OPTIONS = 1.6

SUBDIRS = src tests examples

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = pyorbit-2.pc

EXTRA_DIST = \
  pyorbit-2.pc.in \
  pyorbit.spec \
  pyorbit.spec.in \
  setup.py \
  dsextras.py \
  MAINTAINERS	\
  MANIFEST.in \
  PKG-INFO.in \
  PKG-INFO \
  ChangeLog.pre-2-0
